--- a/style.css
+++ b/style.css
@@ -69,10 +69,27 @@ h3{
     border-radius: 6px;
     font-size: 16px;
     cursor: pointer;
+     transition: transform 0.2s ease;
+    box-shadow: 0.2s ease;
 }
+
+.login-form button:hover{
+    transform: scale(1.05);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
 
 .login-form .createaccount{
     background-color: #42b72a;
+}
+
+.login-form .createaccount:hover{
+    transform: scale(1.05);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+.login-form .createaccount:active{
+    transform: scale(0.95);
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
 }
 
 .login-form a{
